--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "next": "15.2.2",
+    "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4"
+    "eslint-config-next": "15.2.3"
   }
 }
